# server/src/features/user/schemas/updateProfileSchema.ts
@@ -1,0 +1,12 @@
+import { type } from "arktype";
+
+export const updateProfileSchema = type({
+  name: type("string >= 2").configure({
+    message: "Name must be at least 2 characters",
+  }),
+  email: type("string.email").configure({
+    message: "Email must be a valid email address",
+  }),
+  "oldPassword?": "string",
+  "newPassword?": "string",
+});
